updating jupyter notebook

--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train a Logistic Regression model print the model score"
+    "# Train a Logistic Regression model print the model score 0.9908171687990095"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Train a Random Forest Classifier model and print the model score"
+    "# Train a Random Forest Classifier model and print the model score 0.9910751134956666"
    ]
   },
   {
