--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -177,7 +177,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_size</th>\n",
+       "      <th>interest_rate</th>\n",
+       "      <th>borrower_income</th>\n",
+       "      <th>debt_to_income</th>\n",
+       "      <th>num_of_accounts</th>\n",
+       "      <th>derogatory_marks</th>\n",
+       "      <th>total_debt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>29175</th>\n",
+       "      <td>8600.0</td>\n",
+       "      <td>6.792</td>\n",
+       "      <td>44500</td>\n",
+       "      <td>0.325843</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23020</th>\n",
+       "      <td>7800.0</td>\n",
+       "      <td>6.419</td>\n",
+       "      <td>41000</td>\n",
+       "      <td>0.268293</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31269</th>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>7.386</td>\n",
+       "      <td>50100</td>\n",
+       "      <td>0.401198</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>20100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35479</th>\n",
+       "      <td>9300.0</td>\n",
+       "      <td>7.093</td>\n",
+       "      <td>47300</td>\n",
+       "      <td>0.365751</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13470</th>\n",
+       "      <td>9200.0</td>\n",
+       "      <td>7.045</td>\n",
+       "      <td>46900</td>\n",
+       "      <td>0.360341</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16900</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
+       "29175     8600.0          6.792            44500        0.325843   \n",
+       "23020     7800.0          6.419            41000        0.268293   \n",
+       "31269    10000.0          7.386            50100        0.401198   \n",
+       "35479     9300.0          7.093            47300        0.365751   \n",
+       "13470     9200.0          7.045            46900        0.360341   \n",
+       "\n",
+       "       num_of_accounts  derogatory_marks  total_debt  \n",
+       "29175                3                 0       14500  \n",
+       "23020                2                 0       11000  \n",
+       "31269                4                 1       20100  \n",
+       "35479                3                 0       17300  \n",
+       "13470                3                 0       16900  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loan_size</th>\n",
+       "      <th>interest_rate</th>\n",
+       "      <th>borrower_income</th>\n",
+       "      <th>debt_to_income</th>\n",
+       "      <th>num_of_accounts</th>\n",
+       "      <th>derogatory_marks</th>\n",
+       "      <th>total_debt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>60914</th>\n",
+       "      <td>12600.0</td>\n",
+       "      <td>8.469</td>\n",
+       "      <td>60300</td>\n",
+       "      <td>0.502488</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36843</th>\n",
+       "      <td>9800.0</td>\n",
+       "      <td>7.289</td>\n",
+       "      <td>49200</td>\n",
+       "      <td>0.390244</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1966</th>\n",
+       "      <td>10900.0</td>\n",
+       "      <td>7.770</td>\n",
+       "      <td>53700</td>\n",
+       "      <td>0.441341</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70137</th>\n",
+       "      <td>10700.0</td>\n",
+       "      <td>7.666</td>\n",
+       "      <td>52700</td>\n",
+       "      <td>0.430740</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27237</th>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>7.353</td>\n",
+       "      <td>49800</td>\n",
+       "      <td>0.397590</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       loan_size  interest_rate  borrower_income  debt_to_income  \\\n",
+       "60914    12600.0          8.469            60300        0.502488   \n",
+       "36843     9800.0          7.289            49200        0.390244   \n",
+       "1966     10900.0          7.770            53700        0.441341   \n",
+       "70137    10700.0          7.666            52700        0.430740   \n",
+       "27237     9900.0          7.353            49800        0.397590   \n",
+       "\n",
+       "       num_of_accounts  derogatory_marks  total_debt  \n",
+       "60914                6                 1       30300  \n",
+       "36843                4                 0       19200  \n",
+       "1966                 5                 1       23700  \n",
+       "70137                5                 1       22700  \n",
+       "27237                4                 0       19800  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prediction: I predict that the logistical regression will perform better. Based on the material we covered in class, this type of model will perform well even if the test data and train data differ significantly and often a simpler model is 'good enough' and should be used when applicable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +423,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +445,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +469,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +489,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -315,6 +552,7 @@
     "from sklearn.utils import resample\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "clfs = []\n",
     "scores = []\n",
     "for i in range(50):\n",
@@ -339,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
