--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -12,7 +12,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "from sklearn.metrics import confusion_matrix"
    ]
   },
   {
@@ -135,10 +136,8 @@
    "source": [
     "# define source\n",
     "credit_risk_path = \"Resources/lending_data.csv\"\n",
-    "\n",
     "# import the data\n",
     "credit_risk_data = pd.read_csv(credit_risk_path)\n",
-    "\n",
     "# display preview\n",
     "credit_risk_data.head()"
    ]
@@ -158,10 +157,8 @@
    ],
    "source": [
     "# Assign the data to X and y\n",
-    "\n",
     "X = credit_risk_data[['loan_size','interest_rate','borrower_income', 'debt_to_income', 'num_of_accounts', 'derogatory_marks','total_debt']]\n",
     "y = credit_risk_data['loan_status']\n",
-    "\n",
     "print(\"Shape: \", X.shape, y.shape)"
    ]
   },
@@ -413,6 +410,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logisitic Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -505,7 +509,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -520,6 +526,56 @@
     "# Train a Logistic Regression model print the model score 0.9908171687990095\n",
     "print(f\"Training Data Score: {classifier.score(X_train, y_train)}\")\n",
     "print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[18663,   102],\n",
+       "       [   56,   563]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create confusion matrix\n",
+    "y_true = y_test\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "confusion_matrix(y_true, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9918489475856377\n"
+     ]
+    }
+   ],
+   "source": [
+    "tn, fp, fn, tp = confusion_matrix(y_true, y_pred).ravel()\n",
+    "accuracy = (tp + tn) / (tp + fp + tn + fn) \n",
+    "print(f\"Accuracy: {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest Classifier"
    ]
   },
   {
@@ -577,21 +633,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Score: 0.9974893382858715\n",
-      "Testing Score: 0.9910235245563351\n"
+      "Training Score: 0.997506534598982\n",
+      "Testing Score: 0.9915394139496492\n"
      ]
     }
    ],
    "source": [
     "# Train a Random Forest Classifier model and print the model score 0.9910751134956666\n",
-    "clf = RandomForestClassifier(random_state=1, n_estimators=50).fit(X_train, y_train)\n",
+    "clf = RandomForestClassifier(random_state=None, n_estimators=50).fit(X_train, y_train)\n",
+    "print(f'Training Score: {clf.score(X_train, y_train)}')\n",
+    "print(f'Testing Score: {clf.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 0.9973345714678773\n",
+      "Testing Score: 0.9917973586463062\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = RandomForestClassifier(random_state=None, n_estimators=20).fit(X_train, y_train)\n",
     "print(f'Training Score: {clf.score(X_train, y_train)}')\n",
     "print(f'Testing Score: {clf.score(X_test, y_test)}')"
    ]
