--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -413,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logisitic Regression"
+    "## Logistic Regression"
    ]
   },
   {
