--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 73,
    "metadata": {
     "scrolled": true
    },
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "       [   56,   563]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler().fit(X_train)\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -633,43 +645,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Score: 0.997506534598982\n",
-      "Testing Score: 0.9915394139496492\n"
+      "Training Score: 0.9974893382858715\n",
+      "Testing Score: 0.9910751134956666\n"
      ]
     }
    ],
    "source": [
     "# Train a Random Forest Classifier model and print the model score 0.9910751134956666\n",
-    "clf = RandomForestClassifier(random_state=None, n_estimators=50).fit(X_train, y_train)\n",
-    "print(f'Training Score: {clf.score(X_train, y_train)}')\n",
-    "print(f'Testing Score: {clf.score(X_test, y_test)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Score: 0.9973345714678773\n",
-      "Testing Score: 0.9917973586463062\n"
-     ]
-    }
-   ],
-   "source": [
-    "clf = RandomForestClassifier(random_state=None, n_estimators=20).fit(X_train, y_train)\n",
-    "print(f'Training Score: {clf.score(X_train, y_train)}')\n",
-    "print(f'Testing Score: {clf.score(X_test, y_test)}')"
+    "clf = RandomForestClassifier(random_state=1, n_estimators=50).fit(X_train_scaled, y_train)\n",
+    "print(f'Training Score: {clf.score(X_train_scaled, y_train)}')\n",
+    "print(f'Testing Score: {clf.score(X_test_scaled, y_test)}')"
    ]
   },
   {
